--- a/index.html
+++ b/index.html
@@ -293,11 +293,11 @@
     </div>
     <div class="item">
       <div class="left"><img src="img/portakal.jpg"><span id="item3">Sıkma Portakal</span></div>
-      <div class="price">100 TL</div>
+      <div class="price">150 TL</div>
     </div>
     <div class="item">
       <div class="left"><img src="img/nar.jpg"><span id="item4">Sıkma Nar</span></div>
-      <div class="price">130 TL</div>
+      <div class="price">180 TL</div>
     </div>
   </div>
 </div>
@@ -485,7 +485,7 @@
 </div>
 
 <div class="accordion">
-  <div class="accordion-header" onclick="toggleAccordion(this)" id="teasTitle">🫖 Çaylar</div>
+  <div class="accordion-header" onclick="toggleAccordion(this)" id="teasTitle">🍵 Çaylar</div>
   <div class="accordion-content">
     <div class="item">
       <div class="left"><img src="img/bardakcay.jpg"><span id="item63">Bardak Çay</span></div>
@@ -506,23 +506,23 @@
   <div class="accordion-header" onclick="toggleAccordion(this)" id="snacksTitle">🥪 Atıştırmalıklar</div>
   <div class="accordion-content">
     <div class="item">
-      <div class="left"><img src="img/kasartost.jpg"><span id="item16">Kaşar Tost</span></div>
+      <div class="left"><img src="img/kasartost.jpg"><span id="item16"><span id="item16name">Kaşar Tost</span><br><small id="item16desc">Patates kızartması, Domates, Salatalık, Zeytin</small></span></div>
       <div class="price">170 TL</div>
     </div>
     <div class="item">
-      <div class="left"><img src="img/karisiktost.jpg"><span id="item17">Karışık Tost</span></div>
+      <div class="left"><img src="img/karisiktost.jpg"><span id="item17"><span id="item17name">Karışık Tost</span><br><small id="item17desc">Patates kızartması, Domates, Salatalık, Zeytin</small></span></div>
       <div class="price">200 TL</div>
     </div>
     <div class="item">
-      <div class="left"><img src="img/beyazpeynirtost.jpg"><span id="item18">Beyaz Peynirli Tost</span></div>
+      <div class="left"><img src="img/beyazpeynirtost.jpg"><span id="item18"><span id="item18name">Beyaz Peynirli Tost</span><br><small id="item18desc">Patates kızartması, Domates, Salatalık, Zeytin</small></span></div>
       <div class="price">200 TL</div>
     </div>
     <div class="item">
-      <div class="left"><img src="img/kavurmalitost.jpg"><span id="item19">Kavurmalı Tost</span></div>
+      <div class="left"><img src="img/kavurmalitost.jpg"><span id="item19"><span id="item19name">Kavurmalı Tost</span><br><small id="item19desc">Patates kızartması, Domates, Salatalık, Zeytin</small></span></div>
       <div class="price">230 TL</div>
     </div>
     <div class="item">
-      <div class="left"><img src="img/kavurmalikasarlitost.jpg"><span id="item20">Kavurmalı Kaşarlı Tost</span></div>
+      <div class="left"><img src="img/kavurmalikasarlitost.jpg"><span id="item20"><span id="item20name">Kavurmalı Kaşarlı Tost</span><br><small id="item20desc">Patates kızartması, Domates, Salatalık, Zeytin</small></span></div>
       <div class="price">230 TL</div>
     </div>
     <div class="item">
@@ -530,7 +530,7 @@
       <div class="price">110 TL</div>
     </div>
     <div class="item">
-      <div class="left"><img src="img/combotabak.jpg"><span id="item22">Combo Tabağı</span></div>
+      <div class="left"><img src="img/combotabak.jpg"><span id="item22"><span id="item22name">Combo Tabağı</span><br><small id="item22desc">Patates kızartması, Soğan halkası, Sosis, Nugget, Kroket</small></span></div>
       <div class="price">190 TL</div>
     </div>
   </div>
@@ -590,27 +590,15 @@
   <div class="accordion-header" onclick="toggleAccordion(this)" id="dessertsTitle">🍰 Tatlılar</div>
   <div class="accordion-content">
     <div class="item">
-      <div class="left"><img src="img/waffle.jpg"><span id="item34">Waffle</span></div>
+      <div class="left"><img src="img/waffleklasik.jpg"><span id="item34"><span id="item34name">Waffle</span><br><small id="item34desc">(Çilek, Muz, Kivi) [Dondurma +30₺]</small></span></div>
       <div class="price">210 TL</div>
-    </div>
-    <div class="item">
-      <div class="left"><img src="img/tabakwaffle.jpg"><span id="item35">Dondurmalı Waffle</span></div>
-      <div class="price">120 TL</div>
     </div>
     <div class="item">
       <div class="left"><img src="img/waffle.jpg"><span id="item36">Tabak Waffle</span></div>
-      <div class="price">140 TL</div>
-    </div>
-    <div class="item">
-      <div class="left"><img src="img/dubai.jpg"><span id="item37">Dubai Cheesecake</span></div>
-      <div class="price">210 TL</div>
-    </div>
-    <div class="item">
-      <div class="left"><img src="img/siswaffle.jpg"><span id="item38">Şiş Waffle</span></div>
       <div class="price">240 TL</div>
     </div>
     <div class="item">
-      <div class="left"><img src="img/cheesecake.jpg"><span id="item69">Cheesecake</span></div>
+      <div class="left"><img src="img/cheesecake.jpg"><span id="item69"><span id="item69name">Cheesecake</span><br><small id="item69desc">Frambuazlı, limonlu</small></span></div>
       <div class="price">210 TL</div>
     </div>
     <div class="item">
@@ -658,7 +646,7 @@
 
 <div class="footer">
   <span dir="ltr">
-  <span id="phoneLabel" dir="ltr">Telefon</span>: +90 555 123 45 67
+  <span id="phoneLabel" dir="ltr">Telefon</span>: +90 545 369 03 65
 </span>   
   <span id="addressLabel">Adres: Araklı, Trabzon</span>
   <a id="mapLink" href="https://maps.app.goo.gl/KQw3n1ojKLSa2UGo7?g_st=iw" target="_blank">Yol Tarifi</a>
@@ -697,13 +685,19 @@
       item13: "Churchill",
       item14: "Ayran",
       item15: "Su",
-      item16: "Kaşar Tost",
-      item17: "Karışık Tost",
-      item18: "Beyaz Peynirli Tost",
-      item19: "Kavurmalı Tost",
-      item20: "Kavurmalı Kaşarlı Tost",
+      item16name: "Kaşar Tost",
+      item16desc: "Patates kızartması, Domates, Salatalık, Zeytin",
+      item17name: "Karışık Tost",
+      item17desc: "Patates kızartması, Domates, Salatalık, Zeytin",
+      item18name: "Beyaz Peynirli Tost",
+      item18desc: "Patates kızartması, Domates, Salatalık, Zeytin",
+      item19name: "Kavurmalı Tost",
+      item19desc: "Patates kızartması, Domates, Salatalık, Zeytin",
+      item20name: "Kavurmalı Kaşarlı Tost",
+      item20desc: "Patates kızartması, Domates, Salatalık, Zeytin",
       item21: "Patates Kızartması",
-      item22: "Combo Tabağı",
+      item22name: "Combo Tabağı",
+      item22desc: "Patates kızartması, Soğan halkası, Sosis, Nugget, Kroket",
       item23: "Kumpir",
       item24name: "Klasik Sandviç",
       item24desc: "(Domates, Beyaz peynir, Kaşar, Marul, Salam)",
@@ -723,7 +717,8 @@
       item32desc: "(150gr köfte, Domates, Marul, Turşu, Özel sos) [Çedar +20₺]",
       item33name: "Çorba",
       item33desc: "Bu bir test ürünüdür, fiyat geçici.",
-      item34: "Waffle",
+      item34name: "Waffle",
+      item34desc: "Çilek, Muz, Kivi",
       item35: "Dondurmalı Waffle",
       item36: "Tabak Waffle",
       item37: "Dubai Cheesecake",
@@ -736,7 +731,7 @@
       item41desc: "Espresso, bol miktarda sıcak süt ve hafif süt köpüğü ile yapılır.",
       item42name: "Caramel Latte",
       item42desc: "Espresso, bol miktarda sıcak süt ve hafif süt köpüğü ve caramel sos ile yapılır.",
-      item43name: "Cappuccino",
+      item43name: "Cappucino",
       item43desc: "Eşit miktarda espresso, sıcak süt ve kalın süt köpüğü ile içerir.",
       item44name: "Mocha",
       item44desc: "Espresso, sıcak çikolata ve süt karışımı, üzerine krema eklenebilir.",
@@ -765,7 +760,8 @@
       item66: "Çikolatalı Milkshake",
       item67: "Çilekli Milkshake",
       item68: "Muzlu Milkshake",
-      item69: "Cheesecake",
+      item69name: "Cheesecake",
+      item69desc: "Frambuazlı, limonlu",
       item70: "Dubai Cheesecake",
       item71: "San Sebastian",
       item72: "Orman Meyveli Pasta",
@@ -811,13 +807,19 @@
       item13: "Churchill",
       item14: "Ayran",
       item15: "Water",
-      item16: "Cheese Toast",
-      item17: "Mixed Toast",
-      item18: "White Cheese Toast",
-      item19: "Roast Meat Toast",
-      item20: "Roast Meat with Cheese Toast",
+      item16name: "Cheese Toast",
+      item16desc: "French fries, Tomato, Cucumber, Olives",
+      item17name: "Mixed Toast",
+      item17desc: "French fries, Tomato, Cucumber, Olives",
+      item18name: "White Cheese Toast",
+      item18desc: "French fries, Tomato, Cucumber, Olives",
+      item19name: "Roast Meat Toast",
+      item19desc: "French fries, Tomato, Cucumber, Olives",
+      item20name: "Roast Meat with Cheese Toast",
+      item20desc: "French fries, Tomato, Cucumber, Olives",
       item21: "French Fries",
-      item22: "Combo Plate",
+      item22name: "Combo Plate",
+      item22desc: "French fries, Onion rings, Sausage, Nugget, Croquette",
       item23: "Kumpir",
       item24name: "Classic Sandwich",
       item24desc: "(Tomato, White cheese, Kashar, Lettuce, Salami)",
@@ -837,7 +839,8 @@
       item32desc: "(150gr meatballs, Tomato, Lettuce, Pickle, Special sauce) [Cheddar +20₺]",
       item33name: "Soup",
       item33desc: "This is a test product, price is temporary.",
-      item34: "Waffle",
+      item34name: "Waffle",
+      item34desc: "Strawberry, Banana, Kiwi",
       item35: "Ice Cream Waffle",
       item36: "Plate Waffle",
       item37: "Dubai Cheesecake",
@@ -879,7 +882,8 @@
       item66: "Chocolate Milkshake",
       item67: "Strawberry Milkshake",
       item68: "Banana Milkshake",
-      item69: "Cheesecake",
+      item69name: "Cheesecake",
+      item69desc: "Raspberry, lemon",
       item70: "Dubai Cheesecake",
       item71: "San Sebastian",
       item72: "Forest Fruit Cake",
@@ -925,13 +929,19 @@
       item13: "تشرشل",
       item14: "أيرن",
       item15: "ماء",
-      item16: "تست كازو",
-      item17: "تست مختلط",
-      item18: "تست جبن أبيض",
-      item19: "تست لحم مشوي",
-      item20: "تست لحم مشوي مع جبن",
+      item16name: "تست كازو",
+      item16desc: "بطاطس مقلية، طماطم، خيار، زيتون",
+      item17name: "تست مختلط",
+      item17desc: "بطاطس مقلية، طماطم، خيار، زيتون",
+      item18name: "تست جبن أبيض",
+      item18desc: "بطاطس مقلية، طماطم، خيار، زيتون",
+      item19name: "تست لحم مشوي",
+      item19desc: "بطاطس مقلية، طماطم، خيار، زيتون",
+      item20name: "تست لحم مشوي مع جبن",
+      item20desc: "بطاطس مقلية، طماطم، خيار، زيتون",
       item21: "بطاطس مقلية",
-      item22: "طبق كومبو",
+      item22name: "طبق كومبو",
+      item22desc: "بطاطس مقلية، بصل حلقات، نوقيت، كروكيت",
       item23: "كومبير",
       item24name: "ساندويتش كلاسيك",
       item24desc: "(طماطم، جبنة بيضاء، كشر، خس، سلامي)",
@@ -951,7 +961,8 @@
       item32desc: "يحتوي على كرات لحم 150 غرامًا، طماطم، خس، مخلل، صلصة خاصة (مع جبنة شيدر إضافية بـ ₺20)",
       item33name: "شوربة",
       item33desc: "هذا منتج اختبار، السعر مؤقت.",
-      item34: "وافل",
+      item34name: "وافل",
+      item34desc: "فراولة، موز، كيوي",
       item35: "وافل بالآيس كريم",
       item36: "وافل طبق",
       item37: "تشيز كيك دبي",
@@ -993,7 +1004,8 @@
       item66: "ميلكشيك الشوكولاتة",
       item67: "ميلكشيك الفراولة",
       item68: "ميلكشيك الموز",
-      item69: "تشيز كيك",
+      item69name: "تشيز كيك",
+      item69desc: "التوت البري، الليمون",
       item70: "تشيز كيك دبي",
       item71: "سان سيباستيان",
       item72: "كعكة فواكه الغابة",
