--- a/index.html
+++ b/index.html
@@ -455,6 +455,10 @@
       <div class="left"><img src="img/caramelfrappe.jpg"><span id="item57">Caramel Frappe</span></div>
       <div class="price">130 TL</div>
     </div>
+     <div class="item">
+      <div class="left"><img src="img/sogukkahve.jpg"><span id="item57">Soğuk Nescafe</span></div>
+      <div class="price">130 TL</div>
+    </div>
   </div>
 </div>
 
@@ -551,19 +555,19 @@
   <div class="accordion-content">
     <div class="item">
       <div class="left"><img src="img/klasiksandvic.jpg"><span id="item24"><span id="item24name">Klasik Sandviç</span><br><small id="item24desc">(Domates, Beyaz peynir, Kaşar, Marul, Salam)</small></span></div>
-      <div class="price">100 TL</div>
+      <div class="price">170 TL</div>
     </div>
     <div class="item">
       <div class="left"><img src="img/krempeynir.jpg"><span id="item25"><span id="item25name">Krem Peynirli Sandviç</span><br><small id="item25desc">(Domates, Krem peynir, Kaşar, Zeytin, Marul, Salam)</small></span></div>
-      <div class="price">120 TL</div>
+      <div class="price">190 TL</div>
     </div>
     <div class="item">
       <div class="left"><img src="img/tonbalik.jpg"><span id="item26"><span id="item26name">Ton Balıklı Sandviç</span><br><small id="item26desc">(Ton balığı, Beyaz peynir, Zeytin, Mısır, Marul, Salatalık turşusu)</small></span></div>
-      <div class="price">140 TL</div>
+      <div class="price">220 TL</div>
     </div>
     <div class="item">
       <div class="left"><img src="img/hellim.jpg"><span id="item27"><span id="item27name">Hellim Peynirli Sandviç</span><br><small id="item27desc">(Kızarmış hellim, Domates, Zeytin, Marul, Salam)</small></span></div>
-      <div class="price">70 TL</div>
+      <div class="price">220 TL</div>
     </div>
   </div>
 </div>
