--- a/index.html
+++ b/index.html
@@ -510,7 +510,7 @@
   <div class="accordion-header" onclick="toggleAccordion(this)" id="snacksTitle">🥪 Atıştırmalıklar</div>
   <div class="accordion-content">
     <div class="item">
-      <div class="left"><img src="img/kasartost.jpg"><span id="item16"><span id="item16name">Kaşar Tost</span><br><small id="item16desc">Patates kızartması, Domates, Salatalık, Zeytin</small></span></div>
+      <div class="left"><img src="img/kasartost.jpg"><span id="item16"><span id="item16name">Kaşarlı Tost</span><br><small id="item16desc">Patates kızartması, Domates, Salatalık, Zeytin</small></span></div>
       <div class="price">170 TL</div>
     </div>
     <div class="item">
