--- a/index.html
+++ b/index.html
@@ -489,7 +489,7 @@
 </div>
 
 <div class="accordion">
-  <div class="accordion-header" onclick="toggleAccordion(this)" id="teasTitle">🍵 Çaylar</div>
+  <div class="accordion-header" onclick="toggleAccordion(this)" id="teasTitle">🫖 Çaylar</div>
   <div class="accordion-content">
     <div class="item">
       <div class="left"><img src="img/bardakcay.jpg"><span id="item63">Bardak Çay</span></div>
