--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
       <div class="price">130 TL</div>
     </div>
      <div class="item">
-      <div class="left"><img src="img/sogukkahve.jpg"><span id="item57">Soğuk Nescafe</span></div>
+      <div class="left"><img src="img/sogukkahve.jpg"><span id="item81">Soğuk Nescafe</span></div>
       <div class="price">130 TL</div>
     </div>
   </div>
@@ -645,6 +645,10 @@
       <div class="left"><img src="img/sutlac.jpg"><span id="item79">Sütlaç</span></div>
       <div class="price">80 TL</div>
     </div>
+    <div class="item">
+      <div class="left"><img src="img/lattepasta.jpg"><span id="item80">Latte Pasta</span></div>
+      <div class="price">210 TL</div>
+    </div>
   </div>
 </div>
 
@@ -776,6 +780,8 @@
       item77: "Magnolia",
       item78: "Spoonful",
       item79: "Sütlaç",
+      item80: "Latte Pasta",
+      item81: "Soğuk Nescafe",
       phoneLabel: "Telefon",
       mapLink: "Yol Tarifi",
       addressLabel: "Adres: Araklı, Trabzon"
@@ -898,6 +904,8 @@
       item77: "Magnolia",
       item78: "Spoonful",
       item79: "Rice Pudding",
+      item80: "Latte Cake",
+      item81: "Cold Nescafe",
       phoneLabel: "Phone",
       mapLink: "Get Directions",
       addressLabel: "Address: Araklı, Trabzon"
@@ -1020,6 +1028,8 @@
       item77: "ماغنوليا",
       item78: "سفونفول",
       item79: "رز بالحليب",
+      item80: "كعكة لاتيه",
+      item81: "نسكافيه بارد",
       phoneLabel: "هاتف",
       mapLink: "الاتجاهات",
       addressLabel: "العنوان: أراكلي، طرابزون"
