--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@
       <div class="left"><img src="img/caramelfrappe.jpg"><span id="item57">Caramel Frappe</span></div>
       <div class="price">130 TL</div>
     </div>
-     <div class="item">
+    <div class="item">
       <div class="left"><img src="img/sogukkahve.jpg"><span id="item81">Soğuk Nescafe</span></div>
       <div class="price">130 TL</div>
     </div>
@@ -652,10 +652,44 @@
   </div>
 </div>
 
+<div class="accordion">
+  <div class="accordion-header" onclick="toggleAccordion(this)" id="iceCreamsTitle">🍨 Dondurmalar</div>
+  <div class="accordion-content">
+    <div class="item">
+      <div class="left"><img src="img/beyaz.jpg"><span id="item82"><span id="item82name">Limonlu Dondurma</span><br><small id="item82desc">Top 30₺</small></span></div>
+      <div class="price">30 TL</div>
+    </div>
+    <div class="item">
+      <div class="left"><img src="img/beyaz.jpg"><span id="item83"><span id="item83name">Çilekli Dondurma</span><br><small id="item83desc">Top 30₺</small></span></div>
+      <div class="price">30 TL</div>
+    </div>
+    <div class="item">
+      <div class="left"><img src="img/beyaz.jpg"><span id="item84"><span id="item84name">İtalyan Karamel</span><br><small id="item84desc">Top 30₺</small></span></div>
+      <div class="price">30 TL</div>
+    </div>
+    <div class="item">
+      <div class="left"><img src="img/beyaz.jpg"><span id="item85"><span id="item85name">Blusky</span><br><small id="item85desc">Top 30₺</small></span></div>
+      <div class="price">30 TL</div>
+    </div>
+    <div class="item">
+      <div class="left"><img src="img/beyaz.jpg"><span id="item86"><span id="item86name">Oreo</span><br><small id="item86desc">Top 30₺</small></span></div>
+      <div class="price">30 TL</div>
+    </div>
+    <div class="item">
+      <div class="left"><img src="img/beyaz.jpg"><span id="item87"><span id="item87name">Çikolata</span><br><small id="item87desc">Top 30₺</small></span></div>
+      <div class="price">30 TL</div>
+    </div>
+    <div class="item">
+      <div class="left"><img src="img/beyaz.jpg"><span id="item88"><span id="item88name">Vanilya (Sade)</span><br><small id="item88desc">Top 30₺</small></span></div>
+      <div class="price">30 TL</div>
+    </div>
+  </div>
+</div>
+
 <div class="footer">
   <span dir="ltr">
-  <span id="phoneLabel" dir="ltr">Telefon</span>: +90 545 369 03 65
-</span>   
+    <span id="phoneLabel" dir="ltr">Telefon</span>: +90 545 369 03 65
+  </span>   
   <span id="addressLabel">Adres: Araklı, Trabzon</span>
   <a id="mapLink" href="https://maps.app.goo.gl/KQw3n1ojKLSa2UGo7?g_st=iw" target="_blank">Yol Tarifi</a>
 </div>
@@ -677,6 +711,7 @@
       burgersTitle: "🍔 Burgerler",
       dessertsTitle: "🍰 Tatlılar",
       milkshakeTitle: "🥤 Milkshake",
+      iceCreamsTitle: "🍨 Dondurmalar",
       item0: "🌐 Dil Seçimi",
       item1: "Ev Yapımı Limonata",
       item2: "Çilekli Limonata",
@@ -693,7 +728,7 @@
       item13: "Churchill",
       item14: "Ayran",
       item15: "Su",
-      item16name: "Kaşar Tost",
+      item16name: "Kaşarlı Tost",
       item16desc: "Patates kızartması, Domates, Salatalık, Zeytin",
       item17name: "Karışık Tost",
       item17desc: "Patates kızartması, Domates, Salatalık, Zeytin",
@@ -726,7 +761,7 @@
       item33name: "Çorba",
       item33desc: "Bu bir test ürünüdür, fiyat geçici.",
       item34name: "Waffle",
-      item34desc: "Çilek, Muz, Kivi",
+      item34desc: "(Çilek, Muz, Kivi) [Dondurma +30₺]",
       item35: "Dondurmalı Waffle",
       item36: "Tabak Waffle",
       item37: "Dubai Cheesecake",
@@ -782,6 +817,20 @@
       item79: "Sütlaç",
       item80: "Latte Pasta",
       item81: "Soğuk Nescafe",
+      item82name: "Limonlu Dondurma",
+      item82desc: "Top 30₺",
+      item83name: "Çilekli Dondurma",
+      item83desc: "Top 30₺",
+      item84name: "İtalyan Karamel",
+      item84desc: "Top 30₺",
+      item85name: "Blusky",
+      item85desc: "Top 30₺",
+      item86name: "Oreo",
+      item86desc: "Top 30₺",
+      item87name: "Çikolata",
+      item87desc: "Top 30₺",
+      item88name: "Vanilya (Sade)",
+      item88desc: "Top 30₺",
       phoneLabel: "Telefon",
       mapLink: "Yol Tarifi",
       addressLabel: "Adres: Araklı, Trabzon"
@@ -801,6 +850,7 @@
       burgersTitle: "🍔 Burgers",
       dessertsTitle: "🍰 Desserts",
       milkshakeTitle: "🥤 Milkshake",
+      iceCreamsTitle: "🍨 Ice Creams",
       item0: "🌐 Language",
       item1: "Homemade Lemonade",
       item2: "Strawberry Lemonade",
@@ -850,7 +900,7 @@
       item33name: "Soup",
       item33desc: "This is a test product, price is temporary.",
       item34name: "Waffle",
-      item34desc: "Strawberry, Banana, Kiwi",
+      item34desc: "(Strawberry, Banana, Kiwi) [Ice Cream +30₺]",
       item35: "Ice Cream Waffle",
       item36: "Plate Waffle",
       item37: "Dubai Cheesecake",
@@ -906,6 +956,20 @@
       item79: "Rice Pudding",
       item80: "Latte Cake",
       item81: "Cold Nescafe",
+      item82name: "Lemon Ice Cream",
+      item82desc: "Per scoop 30₺",
+      item83name: "Strawberry Ice Cream",
+      item83desc: "Per scoop 30₺",
+      item84name: "Italian Caramel",
+      item84desc: "Per scoop 30₺",
+      item85name: "Blusky",
+      item85desc: "Per scoop 30₺",
+      item86name: "Oreo",
+      item86desc: "Per scoop 30₺",
+      item87name: "Chocolate",
+      item87desc: "Per scoop 30₺",
+      item88name: "Vanilla (Plain)",
+      item88desc: "Per scoop 30₺",
       phoneLabel: "Phone",
       mapLink: "Get Directions",
       addressLabel: "Address: Araklı, Trabzon"
@@ -925,6 +989,7 @@
       burgersTitle: "🍔 برغر",
       dessertsTitle: "🍰 الحلويات",
       milkshakeTitle: "🥤 ميلكشيك",
+      iceCreamsTitle: "🍨 آيس كريم",
       item0: "🌐 اختيار اللغة",
       item1: "ليموناضة منزلية",
       item2: "ليموناضة فراولة",
@@ -974,7 +1039,7 @@
       item33name: "شوربة",
       item33desc: "هذا منتج اختبار، السعر مؤقت.",
       item34name: "وافل",
-      item34desc: "فراولة، موز، كيوي",
+      item34desc: "(فراولة، موز، كيوي) [آيس كريم +30₺]",
       item35: "وافل بالآيس كريم",
       item36: "وافل طبق",
       item37: "تشيز كيك دبي",
@@ -1030,6 +1095,20 @@
       item79: "رز بالحليب",
       item80: "كعكة لاتيه",
       item81: "نسكافيه بارد",
+      item82name: "آيس كريم بالليمون",
+      item82desc: "لكل مغرفة 30 ليرة",
+      item83name: "آيس كريم بالفراولة",
+      item83desc: "لكل مغرفة 30 ليرة",
+      item84name: "كراميل إيطالي",
+      item84desc: "لكل مغرفة 30 ليرة",
+      item85name: "بلو سكاي",
+      item85desc: "لكل مغرفة 30 ليرة",
+      item86name: "أوريو",
+      item86desc: "لكل مغرفة 30 ليرة",
+      item87name: "شوكولاتة",
+      item87desc: "لكل مغرفة 30 ليرة",
+      item88name: "فانيليا (سادة)",
+      item88desc: "لكل مغرفة 30 ليرة",
       phoneLabel: "هاتف",
       mapLink: "الاتجاهات",
       addressLabel: "العنوان: أراكلي، طرابزون"
