--- a/index.html
+++ b/index.html
@@ -473,15 +473,15 @@
   <div class="accordion-header" onclick="toggleAccordion(this)" id="pastaTitle">🍝 Makarnalar</div>
   <div class="accordion-content">
     <div class="item">
-      <div class="left"><img src="img2/fettucini.jpg"><span id="item89"><span id="item89name">Fettucini Alfredo</span><br><small id="item89desc">Tavuk göğsü, mantar, krema, parmesan peyniri</small></span></div>
+      <div class="left"><img src="img/fettucini.jpg"><span id="item89"><span id="item89name">Fettucini Alfredo</span><br><small id="item89desc">Tavuk göğsü, mantar, krema, parmesan peyniri</small></span></div>
       <div class="price">260 TL</div>
     </div>
     <div class="item">
-      <div class="left"><img src="img2/manti.jpg"><span id="item90">Mantı</span></div>
+      <div class="left"><img src="img/manti.jpg"><span id="item90">Mantı</span></div>
       <div class="price">260 TL</div>
     </div>
     <div class="item">
-      <div class="left"><img src="img2/napoliten.jpg"><span id="item92"><span id="item92name">Spagetti Napolitan</span><br><small id="item92desc">Napoliten sos, parmesan peyniri</small></span></div>
+      <div class="left"><img src="img/napoliten.jpg"><span id="item92"><span id="item92name">Spagetti Napolitan</span><br><small id="item92desc">Napoliten sos, parmesan peyniri</small></span></div>
       <div class="price">250 TL</div>
     </div>
   </div>
@@ -490,15 +490,15 @@
   <div class="accordion-header" onclick="toggleAccordion(this)" id="chickenDishesTitle">🍗 Tavuk Ürünleri</div>
   <div class="accordion-content">
     <div class="item">
-      <div class="left"><img src="img2/barbeku.jpg"><span id="item93"><span id="item93name">Barbekü Soslu Tavuk</span><br><small id="item93desc">Tavuk göğsü, mantar, biber, soğan, barbekü sos, pilav ve yanında cips.</small></span></div>
+      <div class="left"><img src="img/barbeku.jpg"><span id="item93"><span id="item93name">Barbekü Soslu Tavuk</span><br><small id="item93desc">Tavuk göğsü, mantar, biber, soğan, barbekü sos, pilav ve yanında cips.</small></span></div>
       <div class="price">280 TL</div>
     </div>
     <div class="item">
-      <div class="left"><img src="img2/kori.jpg"><span id="item94"><span id="item94name">Köri Soslu Tavuk</span><br><small id="item94desc">Tavuk göğsü, mantar, köri sos, pirinç pilavı, patates cips. </small></span></div>
+      <div class="left"><img src="img/kori.jpg"><span id="item94"><span id="item94name">Köri Soslu Tavuk</span><br><small id="item94desc">Tavuk göğsü, mantar, köri sos, pirinç pilavı, patates cips. </small></span></div>
       <div class="price">280 TL</div>
     </div>
     <div class="item">
-      <div class="left"><img src="img2/kori.jpg"><span id="item95"><span id="item95name">Kremalı Tavuk</span><br><small id="item95desc">Tavuk göğsü, krema, pirinç pilavı, patates kızartması, salata.</small></span></div>
+      <div class="left"><img src="img/kori.jpg"><span id="item95"><span id="item95name">Kremalı Tavuk</span><br><small id="item95desc">Tavuk göğsü, krema, pirinç pilavı, patates kızartması, salata.</small></span></div>
       <div class="price">280 TL</div>
     </div>
   </div>
@@ -511,7 +511,7 @@
       <div class="price">330 TL</div>
     </div>
     <div class="item">
-      <div class="left"><img src="img2/ızgaraTavuk.jpg"><span id="item98"><span id="item98name">Tavuk Izgara</span><br><small id="item98desc">Tavuk, pilav, patates, ızgara domates-biber</small></span></div>
+      <div class="left"><img src="img/ızgaraTavuk.jpg"><span id="item98"><span id="item98name">Tavuk Izgara</span><br><small id="item98desc">Tavuk, pilav, patates, ızgara domates-biber</small></span></div>
       <div class="price">280 TL</div>
     </div>
   </div>
